--- a/style.css
+++ b/style.css
@@ -42,4 +42,58 @@ body {
     border-bottom: 80px solid #A82B2B;
     border-radius: 0 0 100% 100%; }
 
+.pep {
+  z-index: 500;
+  position: absolute;
+  border-radius: 100%;
+  background-color: #DC644A;
+  height: 1.4rem;
+  width: 1.4rem;
+  margin-top: -3rem;
+  margin-left: 3.6rem; }
+  .pep:before, .pep:after {
+    content: '';
+    position: absolute;
+    height: 1.4rem;
+    width: 1.4rem;
+    background: #DC644A;
+    border-radius: 100%; }
+  .pep:before {
+    top: -3rem;
+    left: -1.1rem; }
+  .pep:after {
+    left: -2.3rem; }
+
+.face {
+  z-index: 700;
+  position: absolute;
+  margin-top: -3.6rem;
+  margin-left: 2.4rem; }
+
+.eye {
+  border-radius: 100%;
+  background-color: #555;
+  width: .3rem;
+  height: .3rem;
+  top: 2rem; }
+  .eye:before {
+    content: '';
+    position: absolute;
+    border-radius: 100%;
+    height: .3rem;
+    width: .3rem;
+    background: #555;
+    left: 1.3rem; }
+
+.mouth {
+  height: 3px;
+  width: 3px;
+  background: none;
+  border: 1px solid;
+  border-radius: 100%;
+  border-color: transparent transparent #555 #555;
+  transform: rotate(130deg);
+  margin-top: -.6rem;
+  margin-left: .6rem; }
+
 /*# sourceMappingURL=style.css.map */
