--- a/style.css
+++ b/style.css
@@ -102,7 +102,8 @@ body {
   height: 40px;
   width: 4px;
   border-radius: 20px 20px 0 0;
-  margin-top: -7.6rem;
+  animation: melting 5s infinite ease;
+  margin-top: -5.6rem;
   margin-left: 3.9rem; }
   .melt:before, .melt:after {
     content: '';
@@ -118,5 +119,9 @@ body {
     width: 4px;
     height: 40px;
     margin-left: -1.5rem; }
+
+@keyframes melting {
+  100% {
+    transform: translateY(-20px); } }
 
 /*# sourceMappingURL=style.css.map */
